Save username in cookie

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.2"
+      "express": ">= 3.0"
     , "jade": ">= 0.0.1"
     , "socket.io": ">= 0.9"
+    , "cookie" : ">= 0.0.5"
   }
 }
